  Simply highlight the hosts, find your post module, double-click it
  and watch the magic happen. The drawback--each session will open a
  new tab to display the output of the post module.
- You may now hold down shift and click on a tab to close all tabs
  with the same title. If you run a post module against multiple hosts
  this is a good way to get rid of all those tabs.

12 Jul 11 - Change Log
---------
- Fixed a race condition causing some file browser actions to fail on 
  Windows hosts at times.
- Files downloaded through file browser are now archived in:
  [host]\Downloads
- Hail Mary output nows goes to [log dir]\all\hailmary.log
- Added Crack Passwords button to Credentials tab. This opens the 
  launcher for John the Ripper: auxiliary/analyze/jtr_crack_fast
- Added Post Modules item to Meterpreter N -> Explore and Shell N menus. 
  This menu item will show applicable post-exploitation modules in 
  the module browser.
- Loot browser now opens loot viewer as a tab.
- Loot viewer now has many of the same keyboard shortcuts as a console
  tab. You can Ctrl+F to search for stuff, Ctrl+Plus/Minus to increase
  and shrink the font, and Ctrl+A to select everything.

02 Jul 11 - Change Log
--------- 
- Doubled wait time for Meterpreter ls command to complete.
- Armitage now shows psexec option instead of smb on Login menu for
  Windows hosts (when smb service is present).
- Fixed bug preventing manual import of a single host
- Removed automatic resending of console commands that didn't appear
  sent. This was a work-around for a msf bug that may not be present
  anymore. We'll find out.
- Removed --script-all from NMap profiles. I saw quite a discussion
  about this on the NMap mailing list. Oops. Oh well :)
	http://seclists.org/nmap-dev/2011/q2/572
- All host import options now use Metasploit's import_data RPC call.
  This is what all the remote calls map to anyways.
- Added Help button to start dialog.